[package]
name = "luajit-ffi-macro"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
libc = "0.2.155"
once_cell = "1.19.0"
proc-macro2 = "1.0.86"
quote = "1.0.36"
syn = { version = "2.0.71", features = ["full"] }

[dev-dependencies]
expect-test = "1.5.0"
mlua = { version = "0.9.9", features = ["luajit", "macros", "vendored"] }
# syn = "2.0"
# quote = "1.0"
# proc-macro2 = "1.0"
# lazy_static = "1.4.0"
# libc = "0.2"

# [profile.dev]
# rustflags = ["-C", "link-arg=-rdynamic"]

# [target.x86_64-unknown-linux-gnu]
# rustflags = ["-C", "link-arg=-rdynamic"]
